# .github

./: README.md  classical_baseline_cost.py  detect_and_convert_encoding.py  efficiency.py  emissions.py  main.py  optimize_fuel_efficiency.c  tradeoffs.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: QKD.md
app/image/QKD/Dike/: QAO-QKD-Protocol-VIS-001.md  logo.md
fortran/: analyze_trade_offs.f90  calculate_emissions.f90  optimize_fuel_efficiency.f90
opt_fuel/: README.md  core.py  exceptions.py  pyproject.toml  units.py
opt_fuel/.github/workflows/: ci.yml
opt_fuel/tests/: test_core.py  test_units.py
profile/: README.md
tests/: run_tests.py  test_efficiency.py  test_emissions.py  test_tradeoffs.py
